all design done

--- a/style.css
+++ b/style.css
@@ -982,7 +982,7 @@ input:required {
 }
 
 /* ------------------------ 
-    Blog Admin Panel 
+    Blog Admin Panel Inside Code
 ------------------------ */
 
 .blogadmin-body{
