--- a/style.css
+++ b/style.css
@@ -836,7 +836,7 @@ input:required {
     Contact Form 
 ------------------------ */
 .contact-form-main{
-  height: 650px;
+  height: 720px;
 }
 .contact-form{
   margin-top: 85px;
@@ -883,87 +883,85 @@ input:required {
   height: 100px;
   transition: width 2s, height 2s, transform 2s;
 }
-/* ------------------------ 
-   Start of Meet The Team 
--------------------------*/
+/* ----Start of Meet The Team---- */
+.artist{
+  background: #f7f4f4;
+}
 .MeetTheTeam {
-    background: #f4f4f7;
+  background: #f4f4f7;
 }
 
 .TeamMemberOutter {
+ padding: 5px !important;
 }
 
 .TeamMember {
-    color: white;
-    background: #161616;
-    height: 350px;
-    width: 350px;
-    padding: 30px;
-    border-radius: 55px 55px 55px 0px;
+  color: white;
+  background: #232424;
+  height: 350px;
+  width: 350px;
+  padding: 30px;
+  border-radius: 55px 55px 55px 0px;
 }
 
 .TeamMemberImg img {
-    height: 130px;
-    width: 130px;
-    border-radius: 0 35px 0 0 !important;
+  height: 130px;
+  width: 130px;
+  border-radius: 0 35px 0 0 !important;
 }
 
 .TeamMemberSocial {
-    margin-top: 15px;
-    background: #2980b9;
-    height: 55px;
-    width: 180px;
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 20px;
-    padding-left: 5px;
-    padding-right: 5px;
+  margin-top: 15px;
+  background: #2980b9;
+  height: 55px;
+  width: 180px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.TeamMemberSocial a i:hover {
-    color: black;
+.TeamMemberSocial a:hover {
+  color: white;
 }
 
 .TeamMemberSocial a:active {
-    color: white;
+  color: white;
 }
 
 .TeamMemberSocial a:visited {
-    color: white;
+  color: white;
 }
 
 .TeamMemberSocial a:link {
-    color: white;
+  color: white;
 }
 
-.TeamMemberSocial a {
-    font-size: 30px;
-    padding: 5px;
-    color: white;
+.TeamMemberSocial a i{
+  font-size: 30px;
+  padding: 5px;
+  color: white;
 }
 
 .TeamMemberName h4 {
-    font-size: 18px;
-    color: white;
+  font-size: 18px;
 }
 
 .TeamMemberName p {
-    font-size: 14px !important;
-    color: white;
-}
-.TeamMember p {
-    font-size: 14px !important;
-    color: rgb(207, 201, 201);
+  font-size: 14px !important;
 }
 
 .TeamMember:hover {
-    color: black;
-    transition-duration: .5s;
-    background: #81d742;
-    -webkit-box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+  color: black;
+  transition-duration: .5s;
+  background: #81d742;
+  -webkit-box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -5px 5px 20px 0px rgba(0, 0, 0, 0.75);
 }
+
+/* ----End of Meet The Team---- */
 .logInForm{
   width: 600px;
   height: 500px;
