--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url(css/default-assets/classy-nav.css);
 @import url(css/owl.carousel.min.css);
 @import url(css/default-assets/themify-icons.css);
+@import url(css/style.css);
 
 /* :: 01.0 Reboot CSS */
 * {
